--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
-body{
+.th1{
+    background-color: rgb(50, 14, 215);
+}
+.th2{
+    background-color: rgb(50, 14, 215);
+}
+.th3{
+    background-color: rgb(50, 14, 215);
+}
+.tbody1{
+    background-color: rgb(239, 230, 230);
+}
+#body1{
+    background-color: hsla(213, 24%, 39%, 0.808);
+}
+nav{
+    background-color: hsla(213, 24%, 39%, 0.808);
+    width: fit-content;
+    padding: 10px 20px;
     margin: 0 auto;
-    padding: 0 auto;
-    background-image:url(images/lake-6260668_640.webp) ;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 105vh;
+    font-size: 20px;
+}
+#body2{
+    background-color: hsla(213, 24%, 39%, 0.808);
+}
+#body3{
+    background-color: hsla(213, 24%, 39%, 0.808);
+}
+#body4{
+    background-color: hsla(213, 24%, 39%, 0.808);
+}
+a:hover{
+   color: white;
 }
