--- a/style.css
+++ b/style.css
@@ -87,3 +87,13 @@ a.tautan:active {
     transform: scale(0.95);
     box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
 }
+p{
+    color: black;
+    text-align: 50px 50px;
+    max-width: 800px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 16px;
+    margin-left: auto;
+    font-size: 15px;
+}
